--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   margin: auto;
 }
@@ -97,4 +97,39 @@ tbody td:hover:before {
 
 a {
   color: white
+} */
+.Qrcode-scanner-container {
+  min-width: 400px;
+}
+
+.Qrcode-video-container {
+  width: 100%;
+  height: auto;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+  position: relative;
+}
+
+.Qrcode-video-container video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.Qrcode-capture-button {
+  font-size: 18px;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .Qrcode-scanner-container {
+    min-width: 600px;
+  }
+
+  .Qrcode-video-container {
+    padding-top: 75%; /* 4:3 aspect ratio */
+  }
 }
